# serializer version: 1
# name: test_snapshot_fetch_exchange[AZ-RU-1-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -15.369718551635742,
      'sortedZoneKeys': 'AZ->RU-1',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BY-RU-1-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -42.7039909362793,
      'sortedZoneKeys': 'BY->RU-1',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[CN-RU-AS-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 10.538268089294434,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[CN-RU-AS-11]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 9.51062297821045,
      'sortedZoneKeys': 'CN->RU-AS',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[GE-RU-1-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -33.125675201416016,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[KZ-RU-1-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 2183.0078125,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[KZ-RU-1-11]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 2211.9833984375,
      'sortedZoneKeys': 'KZ->RU-1',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[KZ-RU-2-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -664.8331298828125,
      'sortedZoneKeys': 'KZ->RU-2',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[MN-RU-2-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 132.10043334960938,
      'sortedZoneKeys': 'MN->RU-2',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[RU-1-FI-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'FI->RU-1',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[RU-1-RU-2-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 653.2890014648438,
      'sortedZoneKeys': 'RU-1->RU-2',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[RU-1-UA-CR-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': 333.6430969238281,
      'sortedZoneKeys': 'RU-1->UA-CR',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[RU-KGD-LT-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'LT->RU-KGD',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[UA-RU-1-10]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 15, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 16, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 17, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 18, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 19, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 20, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 21, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 22, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 23, 0),
      'netFlow': -0.0,
      'sortedZoneKeys': 'RU-1->UA',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange_live
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0, tzinfo=datetime.timezone.utc),
      'netFlow': 123.52476501464844,
      'sortedZoneKeys': 'MN->RU',
      'source': 'so-ups.ru',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0, tzinfo=datetime.timezone.utc),
      'netFlow': 123.52476501464844,
      'sortedZoneKeys': 'MN->RU',
      'source': 'so-ups.ru',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[RU-1]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 4346.501953125,
        'nuclear': 26255.0,
        'solar': 0.0,
        'unknown': 50173.64501953125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3537.502197265625,
        'nuclear': 26214.0,
        'solar': 0.0,
        'unknown': 49450.04541015625,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3500.501953125,
        'nuclear': 26224.0,
        'solar': 1.7000000476837158,
        'unknown': 48148.43408203125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3494.501953125,
        'nuclear': 26236.0,
        'solar': 7.75,
        'unknown': 47866.341796875,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3546.502197265625,
        'nuclear': 26270.0,
        'solar': 44.26300048828125,
        'unknown': 48896.1337890625,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 4343.501953125,
        'nuclear': 26319.0,
        'solar': 144.78199768066406,
        'unknown': 50447.54443359375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 5991.3017578125,
        'nuclear': 26328.30078125,
        'solar': 331.67401123046875,
        'unknown': 54911.654296875,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 6839.99951171875,
        'nuclear': 26289.30078125,
        'solar': 577.5029907226562,
        'unknown': 59313.83984375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 8181.46826171875,
        'nuclear': 26260.30078125,
        'solar': 766.291015625,
        'unknown': 62992.39794921875,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 8614.6328125,
        'nuclear': 26196.30078125,
        'solar': 881.2440185546875,
        'unknown': 65757.251953125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 9778.923828125,
        'nuclear': 26135.30078125,
        'solar': 894.6680297851562,
        'unknown': 66554.412109375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 9524.998046875,
        'nuclear': 26070.30078125,
        'solar': 907.239013671875,
        'unknown': 66208.2861328125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 10300.41015625,
        'nuclear': 26025.0,
        'solar': 811.791015625,
        'unknown': 66690.50244140625,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 10797.1396484375,
        'nuclear': 26000.0,
        'solar': 733.0910034179688,
        'unknown': 66601.0810546875,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 10744.2294921875,
        'nuclear': 25977.30078125,
        'solar': 618.656005859375,
        'unknown': 66812.89794921875,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-1',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[RU-2]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 11902.0078125,
        'nuclear': 0.0,
        'solar': 28.350000381469727,
        'unknown': 7687.402770996094,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 11968.0302734375,
        'nuclear': 0.0,
        'solar': 72.19999694824219,
        'unknown': 7693.506774902344,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 12199.666015625,
        'nuclear': 0.0,
        'solar': 131.89999389648438,
        'unknown': 7707.402770996094,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 12457.5,
        'nuclear': 0.0,
        'solar': 192.25,
        'unknown': 7751.402770996094,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13121.564453125,
        'nuclear': 0.0,
        'solar': 184.25,
        'unknown': 7880.860290527344,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 14036.2822265625,
        'nuclear': 0.0,
        'solar': 248.37945556640625,
        'unknown': 8061.4954833984375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13385.181640625,
        'nuclear': 0.0,
        'solar': 256.1499938964844,
        'unknown': 8209.995849609375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13647.1044921875,
        'nuclear': 0.0,
        'solar': 256.2760314941406,
        'unknown': 8239.125549316406,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13966.7666015625,
        'nuclear': 0.0,
        'solar': 258.59368896484375,
        'unknown': 8300.357543945312,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 14082.2138671875,
        'nuclear': 0.0,
        'solar': 252.33689880371094,
        'unknown': 8346.084594726562,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13634.400390625,
        'nuclear': 0.0,
        'solar': 241.16603088378906,
        'unknown': 8352.928588867188,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 14025.966796875,
        'nuclear': 0.0,
        'solar': 213.5,
        'unknown': 8366.604736328125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13690.5205078125,
        'nuclear': 0.0,
        'solar': 169.60000610351562,
        'unknown': 8418.335876464844,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13629.388671875,
        'nuclear': 0.0,
        'solar': 108.55000305175781,
        'unknown': 8394.960876464844,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13720.8212890625,
        'nuclear': 0.0,
        'solar': 48.599998474121094,
        'unknown': 8428.925231933594,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[RU-AS]
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3083.6572459897907,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 1631.4450597466612,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3182.1694846645123,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 1819.363160062851,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3344.528174481206,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 1874.1175397979407,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3369.6265439082304,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 1944.8486035749372,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3402.629042312097,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2006.2956686381488,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3362.0474112704196,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2046.5674080456517,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3325.3110963050326,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2086.299775712412,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3345.680769297179,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2063.002318356621,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3364.623898981712,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2062.2972605700834,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3336.3297199164913,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2058.290767082331,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3341.3199692036974,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2053.1565746656024,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3373.015830515013,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2024.3472913665826,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3405.0957052583854,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 2003.295351005698,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3388.8073903854306,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 1942.1822208874244,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 3398.3778635059266,
        'nuclear': 0.0,
        'solar': None,
        'unknown': 1921.0716720967916,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-AS',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[RU]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 26887.67287098979,
        'nuclear': 0.0,
        'solar': 56.70000076293945,
        'unknown': 17006.250601738848,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 27118.23003153951,
        'nuclear': 0.0,
        'solar': 144.39999389648438,
        'unknown': 17206.376709867538,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 27743.860205731205,
        'nuclear': 0.0,
        'solar': 263.79998779296875,
        'unknown': 17288.92308179013,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 28284.62654390823,
        'nuclear': 0.0,
        'solar': 384.5,
        'unknown': 17447.654145567125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 29645.757948562095,
        'nuclear': 0.0,
        'solar': 368.5,
        'unknown': 17768.016249692835,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 31434.611864395418,
        'nuclear': 0.0,
        'solar': 496.7589111328125,
        'unknown': 18169.558374842527,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 30095.67437755503,
        'nuclear': 0.0,
        'solar': 512.2999877929688,
        'unknown': 18506.29147493116,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 30639.889753672178,
        'nuclear': 0.0,
        'solar': 512.5520629882812,
        'unknown': 18541.253416989435,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 31298.157102106714,
        'nuclear': 0.0,
        'solar': 517.1873779296875,
        'unknown': 18663.01234846071,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 31500.75745429149,
        'nuclear': 0.0,
        'solar': 504.6737976074219,
        'unknown': 18750.459956535455,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 30610.120750453698,
        'nuclear': 0.0,
        'solar': 482.3320617675781,
        'unknown': 18759.013752399977,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 31424.949424265014,
        'nuclear': 0.0,
        'solar': 427.0,
        'unknown': 18757.556764022833,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 30786.136720883384,
        'nuclear': 0.0,
        'solar': 339.20001220703125,
        'unknown': 18839.967103935385,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 30647.58473413543,
        'nuclear': 0.0,
        'solar': 217.10000610351562,
        'unknown': 18732.103973817113,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
    dict({
      'datetime': datetime.datetime(2025, 7, 28, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': 0.0,
        'geothermal': 0.0,
        'hydro': 30840.020441630928,
        'nuclear': 0.0,
        'solar': 97.19999694824219,
        'unknown': 18778.922135963978,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU',
    }),
  ])
# ---
# name: test_snapshot_fetch_production_live
  list([
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 11902.0078125,
        'nuclear': 0.0,
        'solar': 28.350000381469727,
        'unknown': 7687.402770996094,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 11968.0302734375,
        'nuclear': 0.0,
        'solar': 72.19999694824219,
        'unknown': 7693.506774902344,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 12199.666015625,
        'nuclear': 0.0,
        'solar': 131.89999389648438,
        'unknown': 7707.402770996094,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 12457.5,
        'nuclear': 0.0,
        'solar': 192.25,
        'unknown': 7751.402770996094,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13121.564453125,
        'nuclear': 0.0,
        'solar': 184.25,
        'unknown': 7880.860290527344,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 14036.2822265625,
        'nuclear': 0.0,
        'solar': 248.37945556640625,
        'unknown': 8061.4954833984375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13385.181640625,
        'nuclear': 0.0,
        'solar': 256.1499938964844,
        'unknown': 8209.995849609375,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13647.1044921875,
        'nuclear': 0.0,
        'solar': 256.2760314941406,
        'unknown': 8239.125549316406,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13966.7666015625,
        'nuclear': 0.0,
        'solar': 258.59368896484375,
        'unknown': 8300.357543945312,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 14082.2138671875,
        'nuclear': 0.0,
        'solar': 252.33689880371094,
        'unknown': 8346.084594726562,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13634.400390625,
        'nuclear': 0.0,
        'solar': 241.16603088378906,
        'unknown': 8352.928588867188,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 14025.966796875,
        'nuclear': 0.0,
        'solar': 213.5,
        'unknown': 8366.604736328125,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13690.5205078125,
        'nuclear': 0.0,
        'solar': 169.60000610351562,
        'unknown': 8418.335876464844,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13629.388671875,
        'nuclear': 0.0,
        'solar': 108.55000305175781,
        'unknown': 8394.960876464844,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
    dict({
      'datetime': FakeDatetime(2025, 7, 28, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Moscow')),
      'production': dict({
        'biomass': None,
        'geothermal': None,
        'hydro': 13720.8212890625,
        'nuclear': 0.0,
        'solar': 48.599998474121094,
        'unknown': 8428.925231933594,
      }),
      'source': 'so-ups.ru',
      'storage': dict({
      }),
      'zoneKey': 'RU-2',
    }),
  ])
# ---
